nextprev: remove odd spacings and fix safari bug with lines breaking in grid children
fixes #5623

--- a/meinberlin/assets/scss/components_user_facing/_nextprev.scss
+++ b/meinberlin/assets/scss/components_user_facing/_nextprev.scss
@@ -7,10 +7,20 @@
     &__prev {
         grid-column: 1;
         justify-self: start;
+        width: 100%;
+        display: inline-block;
     }
 
     &__next {
         grid-column: 2;
         justify-self: end;
+        width: 100%;
+        display: inline-block;
+        text-align: end;
+
+        .fa {
+            margin-left: .4em;
+            margin-right: 0;
+        }
     }
 }
